removed a few things to fix more things

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
       <main class="mdl-layout__content">
         <div class="page-content" style="padding-left: 100px">
-          Click the button Below me hint(you dont have a choice).
+          Click the button Below.
         </div>
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
