--- a/index.html
+++ b/index.html
@@ -21,22 +21,21 @@
     <link rel="manifest" href="site.webmanifest" />
     <title>My first webpage, with JavaScript</title>
   </head>
-
   <body>
     <script>
       function myButtonClicked() {
-        alert("Hello, Wordl!")
+        alert("Hello, Wordl!");
       }
     </script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Hello, World! Using Java Script</span>
+          <span class="mdl-layout-title">Hello, World! with JS</span>
         </div>
       </header>
       <main class="mdl-layout__content">
         <div class="page-content" style="padding-left: 100px">
-          Click the button Below.
+          Click the button.
         </div>
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
@@ -47,7 +46,7 @@
         <br />
         <br />
         <p>
-          <a href="./index2.html">Second page</a>
+          <a href="./index2.html">My index2.html page</a>
         </p>
       </main>
     </div>
